# OpenGL-tutorial

./: CMakeLists.txt
include/: camera.h  flight-camera.h  fly-camera.h  shader.h
src/: main.cpp
src/glsl/: light.fs  light.vs  shader.fs  shader.vs
